FIxed visual editor overflows

--- a/engine/engine.scss
+++ b/engine/engine.scss
@@ -41,6 +41,7 @@ $transition: 0.1s;
 .window {
     width: 100%;
     height: 100%;
+    max-height: calc(100vh - 41px);
     padding: 0;
     flex-grow: 1;
 
@@ -52,6 +53,7 @@ $transition: 0.1s;
     & > * {
         width: 100%;
         flex-grow: 1;
+        flex-shrink: 1;
         border: none;
     }
 
@@ -61,6 +63,7 @@ $transition: 0.1s;
         justify-content: center;
         align-items: center;
         margin: 0;
+        height: 50%;
         background: #ddd;
 
         canvas {
